--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "qr-menu-frontend",
-  "version": "0.1.6",
+  "version": "0.1.7",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -18,6 +18,7 @@
     "@mui/material": "^7.1.1",
     "@mui/material-nextjs": "^7.1.1",
     "@tanstack/react-query": "^5.80.7",
+    "embla-carousel-react": "^8.6.0",
     "jose": "^6.0.11",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.515.0",
