--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "qr-menu-frontend",
-  "version": "0.1.16",
+  "version": "0.1.17",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -23,6 +23,7 @@
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.515.0",
     "next": "15.3.3",
+    "qrcode.react": "^4.2.0",
     "qs": "^6.14.0",
     "react": "^19.0.0",
     "react-color": "^2.19.3",
